gitops/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: go-todo
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 10000
